# Dashboard-Cobre_Litio-Chile

./: .env.example  .gitignore  CHANGELOG.md  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
data/processed/: mineria2024.csv  mineria_2021-2024.csv
notebook/: mineria.ipynb
src/dashboard_mineria/: app.py  callback.py  kpi.py  layout.py  loader.py  plotly.py
src/dashboard_mineria/assets/: main.css
src/dashboard_mineria/config/: __init__.py  data.py
