[tool.poetry]
name = "dashboard-mineria"
version = "0.1.0"
description = ""
authors = ["Cristian Orellana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"


[tool.poetry.group.dev.dependencies]
polars = "^1.32.3"
pydantic-settings = "^2.10.1"
dash = "^3.2.0"
plotly = {extras = ["express"], version = "^6.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
